--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@ng-icons/core": "^30.4.0",
     "@ng-icons/material-icons": "^32.1.0",
     "@tailwindcss/postcss": "^4.1.11",
+    "electron-store": "^10.1.0",
     "postcss": "^8.5.6",
     "rxjs": "~7.8.0",
     "tailwindcss": "^4.1.11",
