--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@tailwindcss/postcss": "^4.1.11",
     "axios": "^1.11.0",
     "electron-store": "^10.1.0",
+    "gsap": "^3.13.0",
     "postcss": "^8.5.6",
     "rxjs": "~7.8.0",
     "tailwindcss": "^4.1.11",
